# spectools

./: .gitignore  CMakeLists.txt  spectool_curses.c  spectool_net_client.h  spectool_raw.c  ubertooth_hw_u1.c  wispy_hw_gen1.c
src/: CMakeLists.txt  QtDesignerTest_en_GB.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui  spectool_net_client.h  spectool_net_server.c  spectool_ng.cpp  spectool_raw.c  spectool_wrapper.cpp  spectool_wrapper.h
src/drivers/: CMakeLists.txt  spectool_container.c  spectool_container.h  ubertooth_hw_u1.c  wispy_hw_24x.c  wispy_hw_dbx.c  wispy_hw_gen1.c
src/widgets/: spectowidget.cpp  spectowidget.h  topowidget.cpp  topowidget.h
